--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.10",
     "@astrojs/check": "^0.5.10",
+    "@astrojs/preact": "^3.1.1",
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/inconsolata": "^5.0.17",
+    "@fontsource-variable/inter": "^5.0.17",
+    "@fontsource/ibm-plex-mono": "^5.0.12",
+    "astro": "^4.5.10",
+    "ninja-keys": "^1.2.2",
+    "preact": "^10.20.1",
+    "simple-icons-astro": "^11.10.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3"
   }
 }
