Update archivos json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,30 +5,45 @@
     "Actualmente",
     "además",
     "Adevinta",
+    "adicionalmente",
+    "Administrativo",
     "Almacenamiento",
+    "analizar",
     "años",
+    "Apertura",
+    "aplicaciones",
     "arquitectura",
+    "asesorías",
+    "Asistente",
     "astro",
     "astrojs",
+    "atención",
     "Avanzado",
     "aventura",
     "cada",
     "carga",
     "Catalunya",
+    "CEDIMA",
     "charlas",
     "cientos",
+    "Cierre",
     "Codember",
     "Codespaces",
     "codi",
     "Código",
     "Colaboración",
     "Colaboré",
+    "comentarios",
+    "comerciales",
     "compartir",
+    "comprobar",
+    "Comunicación",
     "comunidad",
     "Conferencia",
     "consumir",
     "Contenido",
     "convergencia",
+    "creación",
     "Creador",
     "cualquier",
     "cultura",
@@ -43,24 +58,38 @@
     "despliegues",
     "diciembre",
     "diferentes",
+    "digitales",
     "directo",
+    "diseñador",
+    "diseñar",
     "Diseño",
     "Divulgador",
     "Edinson",
     "edirju",
+    "efectivo",
+    "Ejecutivo",
     "Elige",
     "empresas",
+    "encargados",
     "entornos",
     "entrega",
     "equipos",
+    "Escalamiento",
     "Escalé",
+    "escrita",
     "España",
     "espectadores",
+    "estáticas",
+    "evaluar",
+    "evidencias",
     "experiencia",
     "Fomenté",
     "fontsource",
     "Fuente",
     "geolocalizadas",
+    "gestión",
+    "gestionar",
+    "gestor",
     "Googleads",
     "Googleanalytics",
     "Googlegemini",
@@ -71,41 +100,60 @@
     "Hubii",
     "Hubspot",
     "impacto",
+    "INCCA",
     "inconsolata",
     "información",
+    "informáticas",
+    "Ingeniería",
     "Ingeniero",
+    "interacciones",
     "interactiva",
     "interactivo",
+    "interactúan",
+    "intereses",
     "Juego",
     "Jurado",
+    "LATAM",
     "lenguaje",
     "liderando",
     "Lideré",
     "Lista",
+    "manejo",
+    "marcas",
     "Marte",
+    "mejorando",
     "mejoras",
     "midu",
     "midudev",
     "migramos",
     "millón",
     "mitad",
+    "Monitoreo",
     "monolítica",
     "Multidioma",
     "multinacionales",
     "Navidad",
+    "necesidades",
+    "niveles",
     "noticias",
     "Oberta",
     "Openai",
+    "oportuna",
     "optimizada",
     "otra",
+    "Panamericana",
+    "personales",
     "peticiones",
     "plataforma",
+    "posicionamiento",
     "practicar",
     "prácticas",
     "preact",
+    "presencial",
     "primera",
     "producción",
     "productos",
+    "Profesional",
     "Programación",
     "propia",
     "proyectos",
@@ -113,27 +161,46 @@
     "rápida",
     "Reconocido",
     "Recorté",
+    "remota",
+    "remoto",
     "rendimiento",
     "repartidos",
+    "requerimientos",
+    "respuesta",
     "retos",
     "secretos",
+    "sectores",
     "seguidores",
+    "Servicio",
     "servicios",
     "Servidor",
+    "Sistemas",
     "sobre",
     "sociales",
     "soluciones",
     "soportar",
+    "soporte",
+    "superiores",
+    "suscriptor",
+    "sustancialmente",
     "tailwindcss",
+    "tareas",
     "técnica",
     "Técnicas",
+    "técnico",
+    "tecnológicas",
+    "Telecenter",
+    "telefónica",
     "televisores",
     "tiempos",
     "todas",
+    "toma",
     "trabajado",
     "tsconfigs",
+    "Universidad",
     "Universitat",
     "usuarios",
+    "Verificación",
     "Versiones",
     "viajar",
     "visitas",
