update proyectos + add cv.json & landing.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "atención",
     "Avanzado",
     "aventura",
+    "básica",
     "cada",
     "carga",
     "Catalunya",
@@ -27,6 +28,7 @@
     "charlas",
     "cientos",
     "Cierre",
+    "Clon",
     "Codember",
     "Codespaces",
     "codi",
@@ -70,7 +72,10 @@
     "Ejecutivo",
     "Elige",
     "empresas",
+    "emula",
+    "emule",
     "encargados",
+    "entorno",
     "entornos",
     "entrega",
     "equipos",
@@ -86,6 +91,7 @@
     "Fomenté",
     "fontsource",
     "Fuente",
+    "función",
     "geolocalizadas",
     "gestión",
     "gestionar",
@@ -165,6 +171,8 @@
     "remoto",
     "rendimiento",
     "repartidos",
+    "reproduccion",
+    "reproducción",
     "requerimientos",
     "respuesta",
     "retos",
