update json files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "acelerar",
     "activos",
     "Actualmente",
+    "Adaptación",
     "además",
     "Adevinta",
     "adicionalmente",
@@ -59,6 +60,7 @@
     "desde",
     "despliegues",
     "diciembre",
+    "didácticos",
     "diferentes",
     "digitales",
     "directo",
@@ -68,6 +70,7 @@
     "Divulgador",
     "Edinson",
     "edirju",
+    "educativos",
     "efectivo",
     "Ejecutivo",
     "Elige",
@@ -82,8 +85,10 @@
     "Escalamiento",
     "Escalé",
     "escrita",
+    "Esland",
     "España",
     "espectadores",
+    "esta",
     "estáticas",
     "evaluar",
     "evidencias",
@@ -167,6 +172,7 @@
     "rápida",
     "Reconocido",
     "Recorté",
+    "reimaginada",
     "remota",
     "remoto",
     "rendimiento",
