update proyectos en json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,6 +105,7 @@
     "Googleanalytics",
     "Googlegemini",
     "gratuito",
+    "GSAP",
     "Gumroad",
     "hispanohablante",
     "Historia",
