--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     "analizar",
     "años",
     "Apertura",
+    "Aplicación",
     "aplicaciones",
     "arquitectura",
     "asesorías",
@@ -19,16 +20,19 @@
     "astro",
     "astrojs",
     "atención",
+    "atrapa",
     "Avanzado",
     "aventura",
     "básica",
     "cada",
+    "calcular",
     "carga",
     "Catalunya",
     "CEDIMA",
     "charlas",
     "cientos",
     "Cierre",
+    "clásico",
     "Clon",
     "Codember",
     "Codespaces",
@@ -42,6 +46,7 @@
     "comprobar",
     "Comunicación",
     "comunidad",
+    "conejitos",
     "Conferencia",
     "consumir",
     "Contenido",
@@ -59,6 +64,7 @@
     "Desarrollo",
     "desde",
     "despliegues",
+    "Dibujo",
     "diciembre",
     "didácticos",
     "diferentes",
@@ -68,6 +74,7 @@
     "diseñar",
     "Diseño",
     "Divulgador",
+    "Edad",
     "Edinson",
     "edirju",
     "educativos",
@@ -93,6 +100,7 @@
     "evaluar",
     "evidencias",
     "experiencia",
+    "ficción",
     "Fomenté",
     "fontsource",
     "Fuente",
@@ -124,6 +132,7 @@
     "interactúan",
     "intereses",
     "Juego",
+    "jugar",
     "Jurado",
     "LATAM",
     "lenguaje",
@@ -142,6 +151,7 @@
     "mitad",
     "Monitoreo",
     "monolítica",
+    "mostrar",
     "Multidioma",
     "multinacionales",
     "Navidad",
@@ -154,9 +164,14 @@
     "optimizada",
     "otra",
     "Panamericana",
+    "Papel",
+    "permite",
+    "personaje",
     "personales",
     "peticiones",
+    "Piedra",
     "plataforma",
+    "Pókedex",
     "posicionamiento",
     "practicar",
     "prácticas",
@@ -190,6 +205,7 @@
     "servicios",
     "Servidor",
     "Sistemas",
+    "sitio",
     "sobre",
     "sociales",
     "soluciones",
@@ -209,6 +225,7 @@
     "televisores",
     "textos",
     "tiempos",
+    "Tijera",
     "todas",
     "toma",
     "trabajado",
