--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,9 @@
     "charlas",
     "cientos",
     "Cierre",
+    "ciudad",
     "clásico",
+    "Clima",
     "Clon",
     "Codember",
     "Codespaces",
@@ -48,6 +50,7 @@
     "comunidad",
     "conejitos",
     "Conferencia",
+    "consulta",
     "consumir",
     "Contenido",
     "convergencia",
@@ -224,6 +227,7 @@
     "telefónica",
     "televisores",
     "textos",
+    "tiempo",
     "tiempos",
     "Tijera",
     "todas",
