--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "Adevinta",
     "adicionalmente",
     "Administrativo",
+    "agencia",
     "Almacenamiento",
     "analizar",
     "años",
@@ -173,6 +174,7 @@
     "personales",
     "peticiones",
     "Piedra",
+    "Plantilla",
     "plataforma",
     "Pókedex",
     "posicionamiento",
