--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
     "Avanzado",
     "aventura",
     "básica",
+    "binarios",
     "cada",
     "calcular",
     "carga",
@@ -55,11 +56,13 @@
     "consumir",
     "Contenido",
     "convergencia",
+    "convertir",
     "creación",
     "Creador",
     "cualquier",
     "cultura",
     "Datos",
+    "decimales",
     "Desarrollado",
     "Desarrollador",
     "desarrolladores",
@@ -162,6 +165,7 @@
     "necesidades",
     "niveles",
     "noticias",
+    "números",
     "Oberta",
     "Openai",
     "oportuna",
