--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
     "aventura",
     "básica",
     "binarios",
+    "Busca",
     "cada",
     "calcular",
     "carga",
@@ -173,6 +174,7 @@
     "otra",
     "Panamericana",
     "Papel",
+    "Películas",
     "permite",
     "personaje",
     "personales",
