--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource-variable/inconsolata": "^5.0.17",
     "@fontsource-variable/inter": "^5.0.17",
     "@fontsource/ibm-plex-mono": "^5.0.12",
+    "@fontsource/source-sans-pro": "^5.0.8",
     "astro": "^4.5.10",
     "ninja-keys": "^1.2.2",
     "preact": "^10.20.1",
