--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
     "búsqueda",
     "cada",
     "calcular",
+    "cambios",
     "carga",
     "Catalunya",
     "CEDIMA",
@@ -90,6 +91,7 @@
     "efectivo",
     "Ejecutivo",
     "Elige",
+    "eliminacion",
     "empresas",
     "emula",
     "emule",
@@ -205,6 +207,7 @@
     "remoto",
     "rendimiento",
     "repartidos",
+    "repositorio",
     "reproduccion",
     "reproducción",
     "requerimientos",
