--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/inconsolata": "^5.0.17",
     "@fontsource-variable/inter": "^5.0.17",
+    "@fontsource-variable/montserrat": "^5.0.19",
     "@fontsource/ibm-plex-mono": "^5.0.12",
+    "@fontsource/lato": "^5.0.21",
     "@fontsource/source-sans-pro": "^5.0.8",
     "astro": "^4.5.10",
     "ninja-keys": "^1.2.2",
