--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "adicionalmente",
     "Administrativo",
     "agencia",
+    "agregar",
     "Almacenamiento",
     "analizar",
     "años",
@@ -92,6 +93,7 @@
     "Ejecutivo",
     "Elige",
     "eliminacion",
+    "eliminar",
     "empresas",
     "emula",
     "emule",
@@ -114,8 +116,10 @@
     "ficción",
     "Fomenté",
     "fontsource",
+    "frases",
     "Fuente",
     "función",
+    "funcionalidades",
     "geolocalizadas",
     "gestión",
     "gestionar",
@@ -150,6 +154,7 @@
     "liderando",
     "Lideré",
     "Lista",
+    "listar",
     "manejo",
     "marcas",
     "Marte",
@@ -160,11 +165,13 @@
     "migramos",
     "millón",
     "mitad",
+    "monitorear",
     "Monitoreo",
     "monolítica",
     "mostrar",
     "Multidioma",
     "multinacionales",
+    "Música",
     "Navidad",
     "necesidades",
     "niveles",
@@ -175,9 +182,12 @@
     "oportuna",
     "optimizada",
     "otra",
+    "palabras",
+    "palíndromos",
     "Panamericana",
     "Papel",
     "Películas",
+    "pendientes",
     "permite",
     "personaje",
     "personales",
@@ -210,6 +220,7 @@
     "repositorio",
     "reproduccion",
     "reproducción",
+    "Reproductor",
     "requerimientos",
     "respuesta",
     "retos",
@@ -249,6 +260,7 @@
     "Universidad",
     "Universitat",
     "usuarios",
+    "validar",
     "Verificación",
     "Versiones",
     "viajar",
