--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,9 @@
     "Administrativo",
     "agencia",
     "agregar",
+    "Algoritmos",
     "Almacenamiento",
+    "almacenar",
     "analizar",
     "años",
     "Apertura",
@@ -33,13 +35,16 @@
     "calcular",
     "cambios",
     "carga",
+    "carrito",
     "Catalunya",
     "CEDIMA",
+    "Centro",
     "charlas",
     "cientos",
     "Cierre",
     "ciudad",
     "clásico",
+    "Cliente",
     "Clima",
     "Clon",
     "Codember",
@@ -48,9 +53,12 @@
     "Código",
     "Colaboración",
     "Colaboré",
+    "Colombiano",
     "comentarios",
     "comerciales",
     "compartir",
+    "completar",
+    "compras",
     "comprobar",
     "Comunicación",
     "comunidad",
@@ -63,10 +71,13 @@
     "convertir",
     "creación",
     "Creador",
+    "Creativa",
     "cualquier",
     "cultura",
+    "Curso",
     "Datos",
     "decimales",
+    "Definitivo",
     "Desarrollado",
     "Desarrollador",
     "desarrolladores",
@@ -85,6 +96,7 @@
     "diseñar",
     "Diseño",
     "Divulgador",
+    "donde",
     "Edad",
     "Edinson",
     "edirju",
@@ -105,21 +117,28 @@
     "Escalamiento",
     "Escalé",
     "escrita",
+    "Escritura",
     "Esland",
     "España",
     "espectadores",
     "esta",
     "estáticas",
+    "Estrategias",
+    "Estudios",
     "evaluar",
     "evidencias",
     "experiencia",
     "ficción",
+    "Flexbox",
+    "Flujo",
     "Fomenté",
     "fontsource",
     "frases",
     "Fuente",
     "función",
     "funcionalidades",
+    "Fundación",
+    "Fundamentos",
     "geolocalizadas",
     "gestión",
     "gestionar",
@@ -141,6 +160,8 @@
     "informáticas",
     "Ingeniería",
     "Ingeniero",
+    "Inteligencia",
+    "Interacción",
     "interacciones",
     "interactiva",
     "interactivo",
@@ -155,7 +176,10 @@
     "Lideré",
     "Lista",
     "listar",
+    "listas",
+    "Lógico",
     "manejo",
+    "Maquetación",
     "marcas",
     "Marte",
     "mejorando",
@@ -165,10 +189,12 @@
     "migramos",
     "millón",
     "mitad",
+    "Moderno",
     "monitorear",
     "Monitoreo",
     "monolítica",
     "mostrar",
+    "Moviles",
     "Multidioma",
     "multinacionales",
     "Música",
@@ -188,6 +214,7 @@
     "Papel",
     "Películas",
     "pendientes",
+    "Pensamiento",
     "permite",
     "personaje",
     "personales",
@@ -195,16 +222,20 @@
     "Piedra",
     "Plantilla",
     "plataforma",
+    "Plataformas",
+    "Platzi",
     "Pókedex",
     "posicionamiento",
     "practicar",
     "prácticas",
+    "Práctico",
     "preact",
     "presencial",
     "primera",
     "producción",
     "productos",
     "Profesional",
+    "Profesionales",
     "Programación",
     "propia",
     "proyectos",
@@ -245,7 +276,9 @@
     "técnica",
     "Técnicas",
     "técnico",
+    "Tecnología",
     "tecnológicas",
+    "Tecnólogo",
     "Telecenter",
     "telefónica",
     "televisores",
@@ -254,7 +287,9 @@
     "tiempos",
     "Tijera",
     "todas",
+    "Todos",
     "toma",
+    "trabaja",
     "trabajado",
     "tsconfigs",
     "Universidad",
