--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "Administrativo",
     "agencia",
     "agregar",
+    "albumes",
     "Algoritmos",
     "Almacenamiento",
     "almacenar",
@@ -21,6 +22,7 @@
     "arquitectura",
     "asesorías",
     "Asistente",
+    "asociado",
     "astro",
     "astrojs",
     "atención",
@@ -29,6 +31,7 @@
     "aventura",
     "básica",
     "binarios",
+    "boxicons",
     "Busca",
     "búsqueda",
     "cada",
@@ -171,6 +174,7 @@
     "jugar",
     "Jurado",
     "LATAM",
+    "lato",
     "lenguaje",
     "liderando",
     "Lideré",
@@ -240,6 +244,7 @@
     "propia",
     "proyectos",
     "Pruebas",
+    "Publicación",
     "rápida",
     "Reconocido",
     "Recorté",
@@ -282,6 +287,7 @@
     "Telecenter",
     "telefónica",
     "televisores",
+    "tema",
     "textos",
     "tiempo",
     "tiempos",
@@ -296,6 +302,7 @@
     "Universitat",
     "usuarios",
     "validar",
+    "vendidos",
     "Verificación",
     "Versiones",
     "viajar",
