update hero + SkillSlider

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
     "aventura",
     "básica",
     "binarios",
+    "Bitstream",
     "boxicons",
     "Busca",
     "búsqueda",
@@ -274,6 +275,7 @@
     "soportar",
     "soporte",
     "superiores",
+    "suscribe",
     "suscriptor",
     "sustancialmente",
     "tailwindcss",
