--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.8.1",
+    "@astrojs/mdx": "^3.1.3",
     "@astrojs/preact": "^3.5.0",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/inconsolata": "^5.0.17",
